--- a/publico/css/style.css
+++ b/publico/css/style.css
@@ -160,7 +160,7 @@ body {
   #hero {
     width: 100%;
     height: 100vh;
-    background: url("/publico/assets/img/rodeioshow.jpg") top right;
+    background: url("../assets/img/rodeioshow.jpg") top right;
     background-size: cover;
     position: relative;
   }
